Disable fix vertical align of last panel cell

--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -471,7 +471,7 @@
     }
 }
 
-@media (min-width: @screen-sm-min) {
+/*@media (min-width: @screen-sm-min) {
     // fix vertical align of last cell
     .panel-row:first-child,
     .panel-section-heading + .panel-row {
@@ -481,7 +481,7 @@
             }
         }
     }
-}
+}*/
 
 
 // Variantes
